fix z-index in adv

--- a/src/block/site/page/index/advantages/.less
+++ b/src/block/site/page/index/advantages/.less
@@ -50,6 +50,7 @@
 		z-index: 2;
 		@media @media-size-xs{position: relative;  margin-bottom: 6vw;}
 		&.item1{
+			z-index: 4;
 			@media @media-size-xs-p{
 				width: 100%;
 				height: 61vw;
