--- a/src/css/bootstrap/carousel.less
+++ b/src/css/bootstrap/carousel.less
@@ -270,12 +270,14 @@
 		border-radius: 50%;
 		border: 3px solid;
 		border-color: @white;
+		cursor: pointer;
 		width: 16px;
 		height: 16px;
 		margin: 0 8px;
 		transition: @transition-site;
 		&.active{
 			background-color: @white; 
+			cursor: default;
 		}
 	}
 }
